--- a/calendar.html
+++ b/calendar.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jens_site</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Jens_site</title>
 </head>
 
-<header> 
-        <h1 id="header_text"><img  class="header_image" src="images/job_ed.jpg"  alt="image">Welcome to Dual Credit English at  Southwestern High
-        </h1>
-</header>
+<div id="header"> 
+        <img  id="header_image" src="images/job_ed.jpg"  alt="image">
+        <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
+</div>
 
 <body>  
     <ul id="nav_container">
-        <li > <a id="nav_cont_home" href="index.html" >Home</a></li>
-        <li> <a href=# >Google docs</a></li>
-        <li> <a href=# >Google drive</a></li>                                                                            
-        <li> <a href=# >Google classroom</a></li>
-        <li> <a href=# >Email Mrs. Schoch</a></li>    
-        <li> <a href="calendar.html" >Class calendar</a></li>    
+        <li><a href=#></a></li>
+        <li ><a href="index.html" >Home</a></li>
+        <li> <a href="calendar.html" >Calendar</a></li> 
+        <li> <a href=# >Email Mrs. Schoch</a></li>                   
     </ul> 
 
-    <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;ctz=America%2FNew_York" style=" border-width:0 " frameborder="0" scrolling="no" >
-
+    <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;ctz=America%2FNew_York" style=" border-width:0 " frameborder="0">
 </body>
+
 </html>
