--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
     <script src="script.js"></script>
 </head>
 
-<div id="header"> 
-        <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-        <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
-</div>
+<header>
+    <div id="upper_bar"> 
+            <img  id="header_image" src="images/job_ed.jpg"  alt="image">
+            <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
+    </div> <!-- closes "upper_bar" -->
+    <ul id="nav_container">
+        <li ><a href="index.html" >Home</a></li>
+        <li> <a href="calendar.html" >Calendar</a></li> 
+        <li></>
+        <li></li>
+        <li> <a href=# >Email Mrs. Schoch</a></li>                   
+    </ul> 
+</header>
 
 <body>  
-    <ul id="nav_container">
-        <li><a href=#></a></li>
-        <li ><a href="index.html" >Home</a></li>                                           
-        <li> <a href="calendar.html" >Calendar</a></li> 
-        <li> <a href=# >Email Mrs. Schoch</a></li>                 
-    </ul> 
-
+    
 </body>
 
 </html>
