--- a/calendar.html
+++ b/calendar.html
@@ -18,15 +18,15 @@
     </div> <!-- closes "upper_bar" -->
     <ul id="nav_container">
         <li ><a href="index.html" >Home</a></li>
-        <li> <a href="calendar.html" >Calendar</a></li> 
-        <li></>
+        <li><a href="calendar.html" >Calendar</a></li> 
+        <li></li>
         <li></li>
         <li> <a href=# >Email Mrs. Schoch</a></li>                   
     </ul> 
 </header>
 
 <body>  
-    <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;ctz=America%2FNew_York" style=" border-width:0 " frameborder="0">
+    <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 
 </html>
