added content to home page

--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,8 @@
     <script src="script.js"></script>
 </head>
 
-<header>
+<body>
+<header class="calendar">
     <div id="upper_bar"> 
             <img  id="header_image" src="images/job_ed.jpg"  alt="image">
             <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
@@ -24,8 +25,7 @@
         <li> <a href=# >Email Mrs. Schoch</a></li>                   
     </ul> 
 </header>
-
-<body>  
+  
     <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 
