--- a/index.html
+++ b/index.html
@@ -11,21 +11,53 @@
     <script src="script.js"></script>
 </head>
 
-<header>
-    <div id="upper_bar"> 
-            <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-            <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
-    </div> <!-- closes "upper_bar" -->
-    <ul id="nav_container">
-        <li ><a href="index.html" >Home</a></li>
-        <li><a href="calendar.html" >Calendar</a></li> 
-        <li></li>
-        <li></li>
-        <li><a href=# >Email Mrs. Schoch</a></li>                   
-    </ul> 
-</header>
+<body>  
+    <header>
+        <div id="upper_bar"> 
+                <img  id="header_image" src="images/job_ed.jpg"  alt="image">
+                <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
+        </div> <!-- closes "upper_bar" -->
+        <ul id="nav_container">
+            <li ><a href="index.html" >Home</a></li>
+            <li><a href="calendar.html" >Calendar</a></li> 
+            <li></li>
+            <li></li>
+            <li><a href=# >Email Mrs. Schoch</a></li>                   
+        </ul> 
+    </header>   
 
-<body>      
+    <div id="vert_nav_bar">
+        <ul id="side_nav">
+<!--             <li><a href="#">Register</a></li>
+            <li><a href="#">Sign-in</a></li>
+            <li ><a href="#">Sign-out</a><br />&nbsp</li>
+            <li></li>
+            <li>Google Apps:</li>
+            <li class="tab"><a href="http://www.google.com/html/">Classroom</a></li>
+            <li class="tab"><a href="https://www.google.com/docs">Docs</a></li>
+            <li class="tab"><a href="https://www.google.com/drive">Drive</a><br />&nbsp</li>
+            <li>Resources:</li>
+            <li class="tab"><a href="#">Link1</a></li>
+            <li class="tab"><a href="#">Link2</a></li>
+            <li class="tab"><a href="#">Link3</a></li>
+            <li class="tab"><a href="#">Link4</a><br />&nbsp</li>
+          <li>Downloads:</li>
+            <li class="tab"><a href="#">Link1</a></li>
+            <li class="tab"><a href="#">Link2</a></li>
+            <li class="tab"><a href="#">Link3</a></li>
+            <li class="tab"><a href="#">Link4</a></ll> -->
+            <li><a href="#">TEST LINK</a></li>
+        </ul>
+
+    </div>
+
+    <img  id="teacher_img" src="images/job_ed.jpg"  alt="teacher_image">
+    <p id="text_container">
+        Donizzle that's the shizzle auctor mauris. Phasellizzle shizzlin dizzle elit ut nibh pretium tincidunt. Maecenas a brizzle. Vestibulizzle in lacizzle i'm in the shizzle maurizzle daahng dawg tristique. Pizzle izzle tortor boofron amet eros shiz porta. Shizzlin dizzle velit tortor, ultricizzle mah nizzle, hendrerit quis, adipiscing pizzle, dui. Tellivizzle velizzle the bizzle, mammasay mammasa mamma oo sa check it out, pharetra non, dictum sizzle, crunk. Rizzle neque. Cras lorizzle. My shizz vitae erizzle izzle shizzle my nizzle crocodizzle commodo adipiscing. Fusce ac shizznit for sure nibh shizzlin dizzle mattizzle. Phasellus gizzle sapien nizzle funky fresh. Suspendisse lorizzle leo, sollicitudin sizzle, away izzle, commodo nec, justo. Mofo break yo neck, yall porttitizzle ligula. Nunc feugizzle, tellus fo ornare tempizzle, sapien ass tincidunt phat, fizzle dapibus you son of a bizzle ac fo shizzle. Phasellizzle quam leo, imperdiet izzle, ass izzle, semper you son of a bizzle, sapien. Ut tellivizzle magna vel shit. Sizzle gangsta daahng dawg, suscipizzle break yo neck, yall, da bomb et, dope gangsta, velizzle. Mauris ass dawg. Hizzle izzle magna dope amet risus iaculizzle pot.
+    </p>
+    <p id="text_container">
+        Curabitur et we gonna chung you son of a bizzle nisi rizzle mollizzle. Suspendisse potenti. Fo shizzle odio. Vivamus neque. You son of a bizzle dawg. Cras maurizzle owned, interdizzle a, feugizzle sit amizzle, shit izzle, pede. Cool gravida. Vestibulizzle brizzle mi, volutpizzle fo shizzle, sagittis sizzle, for sure sempizzle, crackalackin. Dizzle check it out shit. Aliquam volutpizzle mofo vel orci. Crizzle quis justo cool purus sodales ornare. Go to hizzle venenatizzle stuff da bomb get down get down. Nunc its fo rizzle. Suspendisse dang crazy lacus. Curabitizzle pizzle ante. Nunc mofo, leo doggy hendrerizzle, ipsum felizzle mammasay mammasa mamma oo sa sizzle, shizzle my nizzle crocodizzle mofo magna felizzle luctus pede. Mofo fo shizzle nisl. Class aptent i'm in the shizzle bow wow wow ad litora torquent cool conubia nostra, per inceptos doggy. Crazy interdizzle, i saw beyonces tizzles and my pizzle went crizzle nec elementizzle nonummy, pot orci go to hizzle leo, in sempizzle i saw beyonces tizzles and my pizzle went crizzle arcu fo sizzle.
+    </p>
 </body>
 
 </html>
