added z-index to #vert_nav_bar to correct problem where some links were not responding

--- a/index.html
+++ b/index.html
@@ -27,28 +27,25 @@
     </header>   
 
     <div id="vert_nav_bar">
-        <ul id="side_nav">
-<!--             <li><a href="#">Register</a></li>
+        <ul id="vert_ul">
+            <li><a href="#">Register</a></li>
             <li><a href="#">Sign-in</a></li>
-            <li ><a href="#">Sign-out</a><br />&nbsp</li>
-            <li></li>
+            <li><a href="#">Sign-out</a><br />&nbsp</li>
             <li>Google Apps:</li>
-            <li class="tab"><a href="http://www.google.com/html/">Classroom</a></li>
-            <li class="tab"><a href="https://www.google.com/docs">Docs</a></li>
-            <li class="tab"><a href="https://www.google.com/drive">Drive</a><br />&nbsp</li>
+            <li class="tab"><a href="#">Classroom</a></li>
+            <li class="tab"><a href="#">Docs</a></li>
+            <li class="tab"><a href="#">Drive</a><br />&nbsp</li>
             <li>Resources:</li>
             <li class="tab"><a href="#">Link1</a></li>
             <li class="tab"><a href="#">Link2</a></li>
             <li class="tab"><a href="#">Link3</a></li>
             <li class="tab"><a href="#">Link4</a><br />&nbsp</li>
-          <li>Downloads:</li>
+            <li>Downloads:</li>
             <li class="tab"><a href="#">Link1</a></li>
             <li class="tab"><a href="#">Link2</a></li>
             <li class="tab"><a href="#">Link3</a></li>
-            <li class="tab"><a href="#">Link4</a></ll> -->
-            <li><a href="#">TEST LINK</a></li>
+            <li class="tab"><a href="#">Link4</a></ll>
         </ul>
-
     </div>
 
     <img  id="teacher_img" src="images/job_ed.jpg"  alt="teacher_image">
