Added some images, added footers, tweaked margins and layouts.

--- a/calendar.html
+++ b/calendar.html
@@ -27,6 +27,10 @@
 </header>
   
     <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+     <div id="cal_footer">
+        <img id="cal_footer_img" src="images/lewis_486x180.jpg" alt="Lewis quote">
+    </div>
 </body>
 
 </html>
