--- a/calendar.html
+++ b/calendar.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens_site</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-</head>
+<title>jens_site: calendar</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="normalize.css">
+<link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 
 <body>
 <header class="calendar">
@@ -30,6 +28,20 @@
 
      <div id="cal_footer">
         <img id="cal_footer_img" src="images/lewis_486x180.jpg" alt="Lewis quote">
+    </div>
+
+    <div id="logo_div">
+        <svg  id="logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
+            <defs> 
+                <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
+                    <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
+                    <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" /> 
+                </linearGradient> 
+            </defs> 
+            <ellipse cx="137" cy="71" rx="85" ry="55" fill="url(#grad1)" /> 
+            <text fill="#ffffff" font-size="45" font-family="Verdana" x="67" y="86">SWHS</text> 
+            Sorry, your browser does not support inline SVG. 
+        </svg>
     </div>
 </body>
 
