--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
                 <img  id="header_image" src="images/job_ed.jpg"  alt="image">
                 <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
         </div> <!-- closes "upper_bar" -->
-        <ul id="nav_container">
-            <li ><a href="index.html" >Home</a></li>
-            <li><a href="calendar.html" >Calendar</a></li> 
-            <li></li>
-            <li></li>
-            <li><a href=# >Email Mrs. Schoch</a></li>                   
-        </ul> 
+            <ul id="nav_container">
+                <li ><a href="index.html">Home</a></li>
+                <li><a href="calendar.html">Calendar</a></li> 
+                <li><a href="#">Register</a></li>
+                <li></li>
+                <li><a href=# >Email Mrs. Schoch</a></li>           
+            </ul> 
     </header>   
 
     <div id="vert_nav_bar">
         <ul id="vert_ul">
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Sign-in</a></li>
-            <li><a href="#">Sign-out</a><br />&nbsp</li>
             <li>Google Apps:</li>
-            <li class="tab"><a href="#">Classroom</a></li>
             <li class="tab"><a href="#">Docs</a></li>
+            <li class="tab"><a href="#">Sheets</a></li>
+            <li class="tab"><a href="#">Slides</a></li>
             <li class="tab"><a href="#">Drive</a><br />&nbsp</li>
             <li>Resources:</li>
             <li class="tab"><a href="#">Link1</a></li>
