Moved Resources to top nav bar. Removed Resources and Downloads from side nav bar.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <li ><a href="index.html">Home</a></li>
                 <li><a href="calendar.html">Calendar</a></li> 
                 <li><a href="#">Register</a></li>
-                <li></li>
-                <li><a href=# >Email Mrs. Schoch</a></li>           
+                <li><a href="#" >Resources</a></li>           
             </ul> 
     </header>   
 
@@ -30,8 +29,9 @@
             <li class="tab"><a href="#">Docs</a></li>
             <li class="tab"><a href="#">Sheets</a></li>
             <li class="tab"><a href="#">Slides</a></li>
-            <li class="tab"><a href="#">Drive</a><br />&nbsp</li>
-            <li>Resources:</li>
+            <li class="tab"><a href="#">Drive</a></li>
+            <!-- <br />&nbsp -->
+            <!-- <li>Resources:</li>
             <li class="tab"><a href="#">Link1</a></li>
             <li class="tab"><a href="#">Link2</a></li>
             <li class="tab"><a href="#">Link3</a></li>
@@ -40,15 +40,15 @@
             <li class="tab"><a href="#">Link1</a></li>
             <li class="tab"><a href="#">Link2</a></li>
             <li class="tab"><a href="#">Link3</a></li>
-            <li class="tab"><a href="#">Link4</a></ll>
+            <li class="tab"><a href="#">Link4</a></ll> -->
         </ul>
     </div>
 
     <img  id="text_img" src="images/shakespeare.jpg"  alt="Shakespeare">
     <p id="text_container">
-        Donizzle that's the shizzle auctor mauris. Phasellizzle shizzlin dizzle elit ut nibh pretium tincidunt. Maecenas a brizzle. Vestibulizzle in lacizzle i'm in the shizzle maurizzle daahng dawg tristique. Pizzle izzle tortor boofron amet eros shiz porta. Shizzlin dizzle velit tortor, ultricizzle mah nizzle, hendrerit quis, adipiscing pizzle, dui. Tellivizzle velizzle the bizzle, mammasay mammasa mamma oo sa check it out, pharetra non, dictum sizzle, crunk. Rizzle neque. Cras lorizzle. My shizz vitae erizzle izzle shizzle my nizzle crocodizzle commodo adipiscing. Fusce ac shizznit for sure nibh shizzlin dizzle mattizzle. Phasellus gizzle sapien nizzle funky fresh. Suspendisse lorizzle leo, sollicitudin sizzle, away izzle, commodo nec, justo. Mofo break yo neck, yall porttitizzle ligula. Nunc feugizzle, tellus fo ornare tempizzle, sapien ass tincidunt phat, fizzle dapibus you son of a bizzle ac fo shizzle. Phasellizzle quam leo, imperdiet izzle, ass izzle, semper you son of a bizzle, sapien. Ut tellivizzle magna vel shit. Sizzle gangsta daahng dawg, suscipizzle break yo neck, yall, da bomb et, dope gangsta, velizzle. Mauris ass dawg. Hizzle izzle magna dope amet risus iaculizzle pot.
-    </p>
-    <p id="text_container">
+        Donizzle that's the shizzle auctor mauris. Phasellizzle shizzlin dizzle elit ut nibh pretium tincidunt. Maecenas a brizzle. Vestibulizzle in lacizzle i'm in the shizzle maurizzle daahng dawg tristique. Pizzle izzle tortor boofron amet eros shiz porta. Shizzlin dizzle velit tortor, ultricizzle mah nizzle, hendrerit quis, adipiscing pizzle, dui. Tellivizzle velizzle the bizzle, mammasay mammasa mamma oo sa check it out, pharetra non, dictum sizzle, crunk. Rizzle neque. Cras lorizzle. My shizz vitae erizzle izzle shizzle my nizzle crocodizzle commodo adipiscing. Fusce ac shizznit for sure nibh shizzlin dizzle mattizzle. Phasellus gizzle sapien nizzle funky fresh. Suspendisse lorizzle leo, sollicitudin sizzle, away izzle, commodo nec, justo. Mofo break yo neck, yall porttitizzle ligula. Nunc feugizzle, tellus fo ornare tempizzle, sapien ass tincidunt phat, fizzle dapibus you son of a bizzle ac fo shizzle. Phasellizzle quam leo, imperdiet izzle, ass izzle, semper you son of a bizzle, sapien. Ut tellivizzle magna vel shit. Sizzle gangsta daahng dawg, suscipizzle break yo neck, yall, da bomb et, dope gangsta, velizzle. Mauris ass dawg. Hizzle izzle magna dope amet risus iaculizzle pot.<br><br>
+    <!-- </p>
+    <p id="text_container"> -->
         Curabitur et we gonna chung you son of a bizzle nisi rizzle mollizzle. Suspendisse potenti. Fo shizzle odio. Vivamus neque. You son of a bizzle dawg. Cras maurizzle owned, interdizzle a, feugizzle sit amizzle, shit izzle, pede. Cool gravida. Vestibulizzle brizzle mi, volutpizzle fo shizzle, sagittis sizzle, for sure sempizzle, crackalackin. Dizzle check it out shit. Aliquam volutpizzle mofo vel orci. Crizzle quis justo cool purus sodales ornare. Go to hizzle venenatizzle stuff da bomb get down get down. Nunc its fo rizzle. Suspendisse dang crazy lacus. 
     </p>
     <footer>
