Major revisions to media query, still not mobile first Text image now disapperars on small screens.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div id="upper_bar"> 
                 <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-                <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
+                <div id="header_text"><h1>SWHS Dual Credit English</h1></div>
         </div> <!-- closes "upper_bar" -->
             <ul id="nav_container">
                 <li ><a href="index.html">Home</a></li>
