--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div id="vert_nav_bar">
         <ul id="vert_ul">
             <li>Google Apps:</li>
-            <li class="tab"><a href="#">Docs</a></li>
-            <li class="tab"><a href="#">Sheets</a></li>
-            <li class="tab"><a href="#">Slides</a></li>
-            <li class="tab"><a href="#">Drive</a></li>
+            <li class="tab"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fdocument%2F%3Fusp%3Dmkt_docs%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fdocument%2F%3Fusp%3Dmkt_docs%26pli%3D1&ltmpl=docs#identifier" target="_blank">Docs</a></li>
+            <li class="tab"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2F%3Fusp%3Dmkt_sheets%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2F%3Fusp%3Dmkt_sheets%26pli%3D1&ltmpl=sheets#identifier" target="_blank">Sheets</a></li>
+            <li class="tab"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fpresentation%2F%3Fusp%3Dmkt_slides%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fpresentation%2F%3Fusp%3Dmkt_slides%26pli%3D1&ltmpl=slides#identifier" target="_blank">Slides</a></li>
+            <li class="tab"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2F#identifier" target="_blank">Drive</a></li>
             <!-- <br />&nbsp -->
             <!-- <li>Resources:</li>
             <li class="tab"><a href="#">Link1</a></li>
