--- a/calendar.html
+++ b/calendar.html
@@ -30,8 +30,8 @@
         <img id="cal_footer_img" src="images/lewis_486x180.jpg" alt="Lewis quote">
     </div>
 
-    <div id="logo_div">
-        <svg  id="logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
+    <div id="cal_logo_div">
+        <svg  id="cal_logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
             <defs> 
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
                     <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
