Added back button at top and bottom of registration form.

--- a/register.html
+++ b/register.html
@@ -11,7 +11,14 @@
 <body>
 
 <div class="container">
-  <h2 id="reg_title" class="form_block">Register for Dual Credit English at SWHS:</h2>
+  <br>
+  <p>
+    <a href="index.html" class="btn btn-info btn-md">
+      <span class="glyphicon glyphicon-arrow-left"></span> Back
+    </a>
+  </p> 
+ <!--  <br> -->
+  <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2>
   <br>
   <p>Note: be sure to scroll all the way down for the Submit button.</p>
    <br>   
@@ -109,9 +116,17 @@
         </div>
       </div>
       <!-- <br> -->
-      <div class="form-group ctr">
-        <button type="submit" value="Send" class="btn btn-primary btn" id="submit">Submit</button> 
-      </div>     
+      <div class="form-group">
+        <button type="submit" value="Send" class="btn btn-info" id="submit">Submit</button> 
+      </div> 
+     <!--  <br> -->
+      <p>
+        <a href="index.html" class="btn btn-info btn-md">
+        <span class="glyphicon glyphicon-arrow-left"></span> Back
+        </a>
+      </p> 
+      <br>
+
     
   </form>
 
