Added teacher's name to upper bar of index.html.

--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
  <!--  <br> -->
   <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2>
   <br>
-  <p>Note: be sure to scroll all the way down for the Submit button.</p>
+  <p>Note: be sure to scroll all the way down for the <code>Submit</code> button.</p>
    <br>   
   <form role="form">
     <div class="form_block">
