--- a/calendar.html
+++ b/calendar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>jens_site: calendar</title>
+<title>jens_site: home</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="normalize.css">
@@ -9,20 +9,19 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 
-<body>
-<header class="calendar">
-    <div id="upper_bar"> 
-            <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-            <div id="header_text"><h1>Welcome to Dual Credit English at  SWHS</h1></div>
-    </div> <!-- closes "upper_bar" -->
-    <ul id="nav_container">
-        <li ><a href="index.html" >Home</a></li>
-        <li><a href="calendar.html" >Calendar</a></li> 
-        <li></li>
-        <li></li>
-        <li> <a href=# >Email Mrs. Schoch</a></li>                   
-    </ul> 
-</header>
+<body>  
+    <header>
+        <div id="upper_bar"> 
+                <img  id="header_image" src="images/job_ed.jpg"  alt="image">
+                <div id="header_text"><h1>SWHS Dual Credit English<br><small>Jennifer Schoch</small></h1></div>
+        </div> <!-- closes "upper_bar" -->
+            <ul id="nav_container">
+                <li ><a href="index.html">Home</a></li>
+                <li><a href="calendar.html">Calendar</a></li> 
+                <li><a href="register.html">Register</a></li>
+                <li><a href="#" >Resources</a></li>           
+            </ul> 
+    </header>   
   
     <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
