Added courses to the schedule selectors on the reg form.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     <img  id="text_img" src="images/shakespeare.jpg"  alt="Shakespeare">
     <p id="text_container">
+        Course content, objectives.  What is expected of the students. Things they need to do to get started (like completing their profile.)
+        <br><br>
         Donizzle that's the shizzle auctor mauris. Phasellizzle shizzlin dizzle elit ut nibh pretium tincidunt. Maecenas a brizzle. Vestibulizzle in lacizzle i'm in the shizzle maurizzle daahng dawg tristique. Pizzle izzle tortor boofron amet eros shiz porta. Shizzlin dizzle velit tortor, ultricizzle mah nizzle, hendrerit quis, adipiscing pizzle, dui. Tellivizzle velizzle the bizzle, mammasay mammasa mamma oo sa check it out, pharetra non, dictum sizzle, crunk. Rizzle neque. Cras lorizzle. My shizz vitae erizzle izzle shizzle my nizzle crocodizzle commodo adipiscing. Fusce ac shizznit for sure nibh shizzlin dizzle mattizzle. Phasellus gizzle sapien nizzle funky fresh. Suspendisse lorizzle leo, sollicitudin sizzle, away izzle, commodo nec, justo. Mofo break yo neck, yall porttitizzle ligula. Nunc feugizzle, tellus fo ornare tempizzle, sapien ass tincidunt phat, fizzle dapibus you son of a bizzle ac fo shizzle. Phasellizzle quam leo, imperdiet izzle, ass izzle, semper you son of a bizzle, sapien. Ut tellivizzle magna vel shit. Sizzle gangsta daahng dawg, suscipizzle break yo neck, yall, da bomb et, dope gangsta, velizzle. Mauris ass dawg. Hizzle izzle magna dope amet risus iaculizzle pot.<br><br>
     <!-- </p>
     <p id="text_container"> -->
