--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
  <!--  <br> -->
   <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2>
   <br>
-  <p>Note: be sure to scroll all the way down for the <code>Submit</code> button.</p>
+  <p>Note: be sure to scroll all the way down for the <span  id="sub">Submit</span> button.</p>
    <br>   
   <form role="form">
     <div class="form_block">
@@ -54,63 +54,133 @@
             <label for="per1">First period:</label>
             <select class="form-control" id="per1">
               <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">
             <label for="per2">Second period:</label>
             <select class="form-control" id="per2">
               <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">
             <label for="per3">Third period:</label>
             <select class="form-control" id="per3">
               <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">        
             <label for="per4">Fourth period:</label>
             <select class="form-control" id="per4">
               <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">
             <label for="per5">Fifth period:</label>
             <select class="form-control" id="per5">
-              <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+             <option>Select</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">
             <label for="per6">Sixth period:</label>
             <select class="form-control" id="per6">
               <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
           <div class="form-group">
             <label for="per7">Seventh period:</label>
             <select class="form-control" id="per7">
-              <option>Select</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+             <option>Select</option>
+              <option>Advanced Modeling</option>
+              <option>Art</option>
+              <option>Business Math</option>
+              <option>Chemistry 3</option>
+              <option>Economics</option>
+              <option>Etymology</option>
+              <option>French 3</option>
+              <option>French 4</option>
+              <option>Government</option>
+              <option>Novels</option>
+              <option>Spanish 3</option>
+              <option>Spanish 4</option>
+              <option>Yearbook</option>
             </select>
           </div>
         </div>
@@ -122,7 +192,7 @@
      <!--  <br> -->
       <p>
         <a href="index.html" class="btn btn-info btn-md">
-        <span class="glyphicon glyphicon-arrow-left"></span> Back
+        <span class="glyphicon glyphicon-arrow-left" ></span> Back
         </a>
       </p> 
       <br>
