Revamped home page using Bootstrap. Changed name of 'register' form/page to 'profile'and altered links accordingly.

--- a/index.html
+++ b/index.html
@@ -1,63 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <title>Dual Credit English</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-<title>jens_site: home</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="normalize.css">
-<link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+  <body>
 
-<body>  
-    <header>
-        <div id="upper_bar"> 
-                <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-                <div id="header_text"><h1>SWHS Dual Credit English<br><small>Jennifer Schoch</small></h1></div>
-        </div> <!-- closes "upper_bar" -->
-            <ul id="nav_container">
-                <li ><a href="index.html">Home</a></li>
-                <li><a href="calendar.html">Calendar</a></li> 
-                <li><a href="register.html">Register</a></li>
-                <li><a href="#" >Resources</a></li>           
-            </ul> 
-    </header>   
-
-    <div id="vert_nav_bar">
-        <ul id="vert_ul">
-            <li>Google Apps:</li>
-            <li class="tab5"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fdocument%2F%3Fusp%3Dmkt_docs%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fdocument%2F%3Fusp%3Dmkt_docs%26pli%3D1&ltmpl=docs#identifier" target="_blank">Docs</a></li>
-            <li class="tab5"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2F%3Fusp%3Dmkt_sheets%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2F%3Fusp%3Dmkt_sheets%26pli%3D1&ltmpl=sheets#identifier" target="_blank">Sheets</a></li>
-            <li class="tab5"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fpresentation%2F%3Fusp%3Dmkt_slides%26pli%3D1&followup=https%3A%2F%2Fdocs.google.com%2Fpresentation%2F%3Fusp%3Dmkt_slides%26pli%3D1&ltmpl=slides#identifier" target="_blank">Slides</a></li>
-            <li class="tab5"><a href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2F#identifier" target="_blank">Drive</a></li>
-            <!-- <br />&nbsp -->
-            <!-- <li>Resources:</li>
-            <li class="tab5"><a href="#">Link1</a></li>
-            <li class="tab5"><a href="#">Link2</a></li>
-            <li class="tab5"><a href="#">Link3</a></li>
-            <li class="tab5"><a href="#">Link4</a><br />&nbsp</li>
-            <li>Downloads:</li>
-            <li class="tab5"><a href="#">Link1</a></li>
-            <li class="tab5"><a href="#">Link2</a></li>
-            <li class="tab5"><a href="#">Link3</a></li>
-            <li class="tab5"><a href="#">Link4</a></ll> -->
+    <div class="container">
+      <header class="page-header">
+        <ul class="nav nav-pills pull-right">
+          <!-- <li><a href="index.html">Home</a></li> -->
+          <li><a href="profile.html">Profile</a></li>
+          <li><a href="calendar.html">Calendar</a></li>
+          <li><a href="resources.html">Resources</a></li>
         </ul>
-    </div>
-
-    <img  id="text_img" src="images/shakespeare.jpg"  alt="Shakespeare">
-    <p id="text_container">
-        Course content, objectives.  What is expected of the students. Things they need to do to get started (like completing their profile.)
-        <br><br>
-        Donizzle that's the shizzle auctor mauris. Phasellizzle shizzlin dizzle elit ut nibh pretium tincidunt. Maecenas a brizzle. Vestibulizzle in lacizzle i'm in the shizzle maurizzle daahng dawg tristique. Pizzle izzle tortor boofron amet eros shiz porta. Shizzlin dizzle velit tortor, ultricizzle mah nizzle, hendrerit quis, adipiscing pizzle, dui. Tellivizzle velizzle the bizzle, mammasay mammasa mamma oo sa check it out, pharetra non, dictum sizzle, crunk. Rizzle neque. Cras lorizzle. My shizz vitae erizzle izzle shizzle my nizzle crocodizzle commodo adipiscing. Fusce ac shizznit for sure nibh shizzlin dizzle mattizzle. Phasellus gizzle sapien nizzle funky fresh. Suspendisse lorizzle leo, sollicitudin sizzle, away izzle, commodo nec, justo. Mofo break yo neck, yall porttitizzle ligula. Nunc feugizzle, tellus fo ornare tempizzle, sapien ass tincidunt phat, fizzle dapibus you son of a bizzle ac fo shizzle. Phasellizzle quam leo, imperdiet izzle, ass izzle, semper you son of a bizzle, sapien. Ut tellivizzle magna vel shit. Sizzle gangsta daahng dawg, suscipizzle break yo neck, yall, da bomb et, dope gangsta, velizzle. Mauris ass dawg. Hizzle izzle magna dope amet risus iaculizzle pot.<br><br>
-    <!-- </p>
-    <p id="text_container"> -->
-        Curabitur et we gonna chung you son of a bizzle nisi rizzle mollizzle. Suspendisse potenti. Fo shizzle odio. Vivamus neque. You son of a bizzle dawg. Cras maurizzle owned, interdizzle a, feugizzle sit amizzle, shit izzle, pede. Cool gravida. Vestibulizzle brizzle mi, volutpizzle fo shizzle, sagittis sizzle, for sure sempizzle, crackalackin. Dizzle check it out shit. Aliquam volutpizzle mofo vel orci. Crizzle quis justo cool purus sodales ornare. Go to hizzle venenatizzle stuff da bomb get down get down. Nunc its fo rizzle. Suspendisse dang crazy lacus. 
-    </p>
-    <footer>
-        <img id="footer_img" src="images/ignorance.jpg" alt="Shakespeare quote">
-    </footer>
-    <div id="logo_div">
-        <svg  id="logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
+        <h3>Southwestern High School</h3>
+      </header>
+      
+      <div class="jumbotron">
+        <h1>Dual Credit English</h1>
+        <p class="lead">
+          <blockquote>
+            <p>In this course we will be......  Please click the <a href="profile.html">Profile</a> link to provide me with some basic information about yourself and please monitor the class calendar to stay informed regarding assignments and due dates.</p><small><cite>Jennifer Schoch</small></cite>
+          </blockquote>
+        </p>
+        <h4>Google links:</h4>
+        <p class="btn-group">
+          <a class="btn btn-primary btn-sm" href="#">Docs</a>
+          <a class="btn btn-success btn-sm" href="#" >Slides</a>
+          <a class="btn btn-default btn-sm" href="#" >Sheets</a>
+          <a class="btn btn-info btn-sm" href="#" >Drive</a>
+        </p> 
+      </div>
+      <div id="foot">
+        <p>&copy; 2015 SWHS - Jennifer Schoch</p>
+        <svg  id="logo_img" height="35px" width="69px" viewBox="0 0 274 140" > 
             <defs> 
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
                     <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
@@ -68,8 +56,8 @@
             <text fill="#ffffff" font-size="45" font-family="Verdana" x="67" y="86">SWHS</text> 
             Sorry, your browser does not support inline SVG. 
         </svg>
+      </div>
     </div>
 
-</body>
-
+  </body>
 </html>
